# wgpu-minecraft-clone

./: .gitignore  Cargo.toml  readme.md  rustfmt.toml  settings.toml
assets/shaders/: main.wgsl
src/: init.rs  logger.rs  main.rs  renderer.rs  settings.rs  test_world_generator.rs  util.rs  world.rs
src/init/: init_texture_provider.rs
src/renderer/: camera.rs  camera_controller.rs  game_render_data.rs  mesh.rs  model.rs  shader.rs  texture.rs  texture_atlas.rs  world.rs
src/renderer/model/: cube_block.rs  invisible_block.rs
src/util/: block_side.rs
src/world/: block.rs  block_type.rs  chunk.rs  game_data.rs
