[package]
name = "wgpu-minecraft-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
chrono = "0.4.31"
colored = "2.0.4"
log = { version = "0.4.20", features = ["std"] }
nalgebra = { version = "*", features = ["bytemuck"] }
nalgebra-glm = "0.18.0"
once_cell = "1.18.0"
pollster = "0.3.0"
serde = "1.0.188"
serde_derive = "1.0.188"
toml = "0.8.0"
wgpu = "0.17.0"
winit = "0.28.6"
image = { version = "0.24.7", default-features = false, features = ["png"] }
strum = { version = "0.25.0", features = ["derive"] }
color-eyre = "0.6.2"
