[package]
name = "wgpu-minecraft-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
chrono = "0.4.31"
colored = "2.0.4"
log = { version = "0.4.20", features = ["std"] }
nalgebra = { version = "*", features = ["bytemuck"] }
nalgebra-glm = "0.18.0"
once_cell = "1.18.0"
pollster = "0.3.0"
serde = "1.0.188"
serde_derive = "1.0.188"
toml = "0.8.0"
wgpu = "0.19.1"
winit = "0.29.10"
image = { version = "0.24.7", default-features = false, features = ["png"] }
strum = { version = "0.26.1", features = ["derive"] }
color-eyre = "0.6.2"
noise = "0.8.2"
lazy_static = "1.4.0"
regex = "1.10.2"
